feat(signup-page): delivers html codes for signup
[delivers #167082292]

--- a/html/signup.html
+++ b/html/signup.html
@@ -19,17 +19,27 @@
 		<form>
 			<div class="container">
 
-				<h1>Sign Up Here<h1>
+				<h1>Sign Up Here</h1>
 			    <hr>
 
 
 				<label for ="email"><b>Email</b></label>
 
 			    <input type="text" placeholder="Enter Email" required>
-			    
-			    <label for ="psw"><b>Password</b></label>
+			    <div>
+				<label for ="location"><b>Enter Location</b></label>
 
-			    <input type="password" placeholder="Enter Password" required>
+				<select>
+				
+				<option>kigali</option>
+				<option>Northern Province</option>
+				<option>Eastern Province</option>
+				<option>Southern Province</option>
+				<option>western province</option>
+				</select>
+				</div>
+
+
 			     <label for ="psw"><b>Password</b></label>
 
 			    <input type="password" placeholder="Confirm Password" required>	
