feat(update-page): Delivers codes for Update page.
- add html codes for an input field added.

[delivers #167082379]

--- a/html/update.html
+++ b/html/update.html
@@ -59,6 +59,11 @@
       <input type="number" name="num">
 
     </p>
+    <p>
+      <label>No of bathrooms</label>
+      <input type="number" name="num">
+
+    </p>
      <p>
       <label>No of Bedrooms</label>
       <input type="number" name="num">
