feat(update-page): delivers codes for update page.
- Add html code for update page
- Add another section for price input.

[delivers #167082379]

--- a/html/update.html
+++ b/html/update.html
@@ -60,7 +60,7 @@
 
     </p>
     <p>
-      <label>No of bathrooms</label>
+      <label>Price</label>
       <input type="number" name="num">
 
     </p>
