--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 <header>
 
       <div class="topnav" id="myTopnav">
-  <a href="#" class="active" style="color: white">PropertyPro Lite</a>
-  <a href="index.html">Home</a>
-  <a href="#">Sell</a>
-  <a href="#">Rent</a>
+  <a href="index.html" class="active" style="color: white">PropertyPro Lite</a>
   <div class="dropdown">
     <button style="color:black"class="dropbtn">Account 
       <i class="fa fa-caret-down"></i>
