--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <header>
 
       <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active" style="color: white">PropertyPro Lite</a>
+  <a href="index.html" id="active">PropertyPro Lite</a>
+
   <div class="dropdown">
     <button style="color:black"class="dropbtn">Account 
       <i class="fa fa-caret-down"></i>
@@ -148,15 +149,15 @@ var autodelay = 3;
 	<div class="section_2">
     
     	
-        <img src="images/image_01.jpg" alt="image" />
-        <h4>Apartment 1</h4>
+        <a href="html/details.html"><img src="images/image_01.jpg" alt="image" /></a>
+        <h4>Nemours Estate</h4>
         <p>Bedrooms: 3<br>Bathrooms: 2<br>Type: Residential<br></p>
         <div class="price">PRICE:<span> $1,234,000</span></div>    
         <div class="readmore"><a href="html/details.html">VIEW PROPERTY</a></div>                       
     </div>
     <div class="section_2">
-        <img src="images/image_02.jpg" alt="image" />
-        <h4>Apartment 2</h4>
+        <a href="html/details.html"><img src="images/image_02.jpg" alt="image" /></a>
+        <h4>Oheka Castle</h4>
         <p>Bedrooms: 3<br>Bathrooms: 2<br>Type: Residential<br></p>
         <div class="price">PRICE:<span> $876,000</span></div>                           
         <div class="readmore"><a href="html/details.html">VIEW PROPERTY</a></div>
@@ -164,8 +165,8 @@ var autodelay = 3;
     </div>
     <div class="section_2">
 
-        <img src="images/image_03.jpg" alt="image" />
-        <h4>Apartment 3</h4>
+        <a href="html/details.html"><img src="images/image_03.jpg" alt="image" /></a>
+        <h4>Marble House</h4>
        <p>Bedrooms: 3<br>Bathrooms: 2<br>Type: Residential<br></p>
         <div class="price">PRICE:<span> $2,468,000</span></div>                           
       <div class="readmore"><a href="html/details.html">VIEW PROPERTY</a></div>
