feat(new-advert-page): Delivers codes for advert.
- add button for uploading new image
- add input fields for the property info

[delivers #167197176]

--- a/html/newad.html
+++ b/html/newad.html
@@ -11,12 +11,10 @@
 <header>
 
       <div class="topnav" id="myTopnav">
-  <a href="../index.html" id="active" >PropertyPro Lite</a>
-  <a href="../index.html">Home</a>
-  <a href="#">Sell</a>
-  <a href="#">Rent</a>
+  <a href="../index.html" id="active">PropertyPro Lite</a>
+
   <div class="dropdown">
-    <button style="color:black"class="dropbtn">Account 
+    <button class="dropbtn">Account 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -36,16 +34,9 @@
 
   <div class="wrapper">
   <div class="company-info">
-	 <h3>PROPERTY STATUS</h3>
+	 <h3>CREATING A NEW PROPERTY ADVERT</h3>
 
-	 <ul>
-     <li>APARTEMENT: 1</li><br>
-     
-     <li>Status: <span>ON SALE</span></li>
-  </ul>
-  <img src="../images/1.jpeg"> 
-  
-
+	 
   </div>
     <div class="contact">
      <form>
@@ -73,8 +64,8 @@
     </p>
 
 
-		<button class="btn">UPDATE PROPERTY</button>
-		<a href="../html/newad.html">Create New property Advert</a>
+        <button class="btn">CREATE NEW PROPERTY</button>
+        <button class="btn">UPLOAD IMAGE</button>	
 
 	 </form>
 
