bug(LFA-feedback):Implement LFA's feedback
- add a delete button to details page
- add a navigation bar to the details page.

[delivers #167218815]

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a href="index.html" id="active">PropertyPro Lite</a>
 
   <div class="dropdown">
-    <button style="color:black"class="dropbtn">Account 
+    <button class="dropbtn">Account 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
