--- a/html/details.html
+++ b/html/details.html
@@ -5,6 +5,24 @@
      <title>Property Pro Lite</title>
      <link href="../css/details.css" rel="stylesheet" type="text/css" />
 </head>
+<header>
+
+		<div class="topnav" id="myTopnav">
+	<a href="../index.html" id="active">PropertyPro Lite</a>
+  
+	<div class="dropdown">
+	  <button class="dropbtn">Account 
+		<i class="fa fa-caret-down"></i>
+	  </button>
+	  <div class="dropdown-content">
+		<a href="../html/login.html">Log Out</a>
+		<a href="#">Change Password</a>
+	  </div>
+	</div> 
+	
+	<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+  </div>
+</header>  
 <body>
      <div class="container">
 
@@ -26,7 +44,8 @@
 
 
      		</select>
-			 <button class="btn"> Submit</button>
+			 <button id="btn1"> Submit</button><br>
+			 <button id="btn"> Delete</button>
 		
 
      	</div>	
@@ -64,7 +83,8 @@
 
 
 
-     </div>
+	 </div>
+	 <script src="../js/nav.js"></script>
 
 </body>
 </html>
