Bug(LFA-feedback): Implement LFA Feedback on UI
- add link to the sign up page.
- add link to the title.

[delivers #167220450]

--- a/html/signup.html
+++ b/html/signup.html
@@ -12,7 +12,7 @@
 </head>	
 
 <body>
-	<h2>PropertyPro Lite</h2>
+	<h2><a href="../html/signup.html" id="link">PropertyPro Lite</a></h2>
 
 	<div class="wrap">
 
@@ -20,7 +20,9 @@
 			<div class="container">
 
 				<h1>Sign Up Here</h1>
-			    <hr>
+				<span>Already registered?</span><a href="../html/login.html" class="link"> click here</a>
+				<hr>
+				
 
 
 				<label for ="email"><b>Email</b></label>
@@ -42,7 +44,7 @@
 
 			     <label for ="psw"><b>Password</b></label>
 
-			    <input type="password" placeholder="Confirm Password" required>	
+			    <input type="password" placeholder="Enter New password" required>	
 	
 
 			    <button type="submit" class="btn"><a href="../index.html">Sign Up</a></button>
