--- a/html/login.html
+++ b/html/login.html
@@ -12,7 +12,7 @@
 </head>	
 
 <body>
-	<h2>PropertyPro Lite</h2>
+	<h2><a href="../html/login.html" id="link">PropertyPro Lite</a></h2>
 
 	<div class="wrap">
 
